# fhir-migrations

./: README.md  config.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
examples/: add_mrn.py  create_patient.py
fhir_migrations/: commands.py  config.py  migration.py  migration_resource.py  utils.py
fhir_migrations/example/: ReadME.md
fhir_migrations/example/versions/: add_mrn.py  create_patient.py
fhir_migrations/examples/: add_mrn.py  add_phone_number.py  create_patient.py
migrations/: utils.py
migrations/example/versions/: add_identifier.py
tests/: migration_list_test.py  migration_test.py
