[build-system]
requires = ["setuptools>=46.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir_migrations"
version = "0.1.0"

description = "Migration Module

Captures common methods needed by the system for migration.

When downgrading, the downgrade() function of the currently
applied migration is being run. Downgrade goes 1 step back.
When upgrading, the upgrade() function of the to-be-applied
migration is being run. Upgrade applies all unapplied migrations.
If cycle is present in the migration order, the error is raised,
and manual resolution is necessary.
In order to create a new migration, all existing migrations must
first be applied.
You cannot create more than one new migration file at a time.
For branching/conflict resolution, manually review the migration files." 


# TODO: ask for name
authors = [
    { name="CIRG", email="cirg@example.com" }
]

dependencies = [
    "flask",
    "requests",
    "fhirclient",
    "click"
]

[tool.setuptools.packages.find]
where = ["migrations"]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
addopts = "--color yes --verbose"
console_output_style = "classic"
filterwarnings = [
    "module",
    "error:.*assertion is always true.*"
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["healthcare", "FHIR", "migrating"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: FHIR :: Migration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
