[build-system]
requires = ["setuptools>=46.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir_migrations"
version = "0.1.0"

description = "The module captures essential methods for system migration, including running downgrade functions for stepping back during downgrades and applying upgrades, which execute upgrade functions for all unapplied migrations, while ensuring that existing migrations are applied before creating new ones." 

# TODO: ask for name
authors = [
    { name="CIRG", email="cirg@example.com" }
]

dependencies = [
    "flask",
    "requests",
    "fhirclient",
    "click"
]

[tool.setuptools.packages.find]
where = ["migrations"]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
addopts = "--color yes --verbose"
console_output_style = "classic"
filterwarnings = [
    "module",
    "error:.*assertion is always true.*"
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["healthcare", "FHIR", "migrating"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: FHIR :: Migration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
